# mynewtowt

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: __init__.py  auth.py  config.py  csrf.py  database.py  main.py  permissions.py  templating.py
app/i18n/: en.py  fr.py
app/middlewares/: __init__.py  force_password.py  maintenance.py  security_headers.py
app/models/: __init__.py  activity_log.py  booking.py  booking_message.py  client_account.py  client_invoice.py  co2_certificate.py  feature_flag.py  known_device.py  leg.py  notification.py  packing_list.py  port.py  rate_limit.py  ticket.py  user.py  vessel.py
app/routers/: admin_router.py  api_v1_router.py  booking_router.py  captain_router.py  cargo_router.py  client_auth_router.py  client_dashboard_router.py  commercial_router.py  erp_scaffold_router.py  escale_router.py  finance_router.py  kpi_router.py  modules_router.py  notifications_router.py  planning_router.py  public_router.py  staff_auth_router.py  staff_booking_router.py  staff_dashboard_router.py  tickets_router.py  tracking_router.py  webauthn_router.py
app/schemas/: __init__.py  booking.py  leg.py
app/services/: __init__.py  activity.py  (+23 more)
docs/: PRODUCTION-NOTEBOOK.md
migrations/: env.py
scripts/: deploy.sh  deploy_v3_1.sh  install.sh  load_ports.py  maintenance.sh  reset_password.py  rollback.sh  seed_demo.py  smoke-tests.sh  verify_signatures.py
tests/: conftest.py
(+158 files in other folders)
